src/test/ui/wf/wf-in-obj-type-trait.stderr
error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/wf-in-obj-type-trait.rs:11:5
   |
LL |     x: dyn Object<MustBeCopy<T>>
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |
   = help: consider adding a `where T: std::marker::Copy` bound
note: required by `MustBeCopy`
  --> $DIR/wf-in-obj-type-trait.rs:5:1
   |
LL | struct MustBeCopy<T:Copy> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
